# SGLoader-V2

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_dist.bat
assets/: style.css
src/: main.rs
src/core/: app_paths.rs  cache_cleanup.rs  cancel_flag.rs  constants.rs  hwid_cleanup.rs  mod.rs  open_url.rs
src/install/: acz_content.rs  client_install.rs  content_install.rs  launcher_mask.rs  mod.rs  robust_builds.rs
src/marsey/: dotnet_metadata.rs  mod.rs  pipes.rs
src/marsey/pipes/: win.rs
src/net/: auth.rs  connect.rs  connect_progress.rs  http_config.rs  mod.rs  news.rs  redial_pipe.rs  servers.rs
src/ss14/: engine_signature.rs  mod.rs  ss14_loader.rs  ss14_server_info.rs  ss14_uri.rs
src/storage/: account_store.rs  favorites.rs  hub_urls.rs  mod.rs  secure_token.rs  settings.rs
src/ui/: icons.rs  mod.rs  patches.rs  window.rs
src/ui/home/: helpers.rs  mod.rs  tab.rs
src/ui/news/: mod.rs  tab.rs
src/ui/settings/: mod.rs  tab.rs
