[package]
name = "SGLoader-V2"
version = "1.0.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.5", features = ["signals", "desktop"] }
dioxus-desktop = { version = "0.5" }
image = "0.25"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
directories = "5"
hex = "0.4"
sha2 = "0.10"
blake2 = "0.10"
zstd = "0.13"
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
url = "2"
ed25519-dalek = { version = "2", features = ["pkcs8"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
	"Win32_Foundation",
	"Win32_Security_Cryptography",
	"Win32_Storage_FileSystem",
	"Win32_System_IO",
	"Win32_System_Memory",
	"Win32_System_Pipes",
	"Win32_System_Threading",
] }
winreg = "0.52"
